--- a/2-CSS/案例/15-品优购项目/index.html
+++ b/2-CSS/案例/15-品优购项目/index.html
@@ -25,7 +25,7 @@
 
 <body>
 <div class="shortcut">
-    <div class="w">
+    <div class="w shortcut-main">
         <div class="shortcut-left">
             <ul>
                 <li>品优购欢迎您！&nbsp;</li>
@@ -37,22 +37,252 @@
         <div class="shortcut-right">
             <ul>
                 <li>我的订单</li>
-                <li></li>
                 <li class="arrow-icon">我的品优购</li>
-                <li></li>
                 <li>品优购会员</li>
-                <li></li>
                 <li>企业采购</li>
-                <li></li>
                 <li class="arrow-icon">关注品优购</li>
-                <li></li>
                 <li class="arrow-icon">客户服务</li>
-                <li></li>
                 <li class="arrow-icon">网站导航</li>
             </ul>
         </div>
     </div>
 </div>
+
+<header class="header w">
+    <div class="w header-main">
+        <div class="logo">
+            <img src="img/logo.png">
+        </div>
+        <div class="header-main-center">
+            <!-- search搜索模块 -->
+            <div class="search">
+                <input type="search" name="" id="" placeholder="语言开发">
+                <button>搜索</button>
+            </div>
+
+            <!-- hotwords模块制作 -->
+            <div class="hotwords">
+                <a href="#" class="style_red">优惠购首发</a>
+                <a href="#">亿元优惠</a>
+                <a href="#">9.9元团购</a>
+                <a href="#">美满99减30</a>
+                <a href="#">办公用品</a>
+                <a href="#">电脑</a>
+                <a href="#">通信</a>
+            </div>
+        </div>
+        <!-- 购物车模块 -->
+        <div class="shopcar">
+            我的购物车
+            <i class="count">8</i>
+        </div>
+    </div>
+</header>
+
+<nav class="nav">
+    <div class="nav-main w">
+        <div class="dt">全部商品分类</div>
+        <div class="navitems">
+            <ul>
+                <li><a href="#">服装城</a></li>
+                <li><a href="#">服装城</a></li>
+                <li><a href="#">服装城</a></li>
+                <li><a href="#">服装城</a></li>
+                <li><a href="#">服装城</a></li>
+                <li><a href="#">服装城</a></li>
+                <li><a href="#">服装城</a></li>
+                <li><a href="#">服装城</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<div class="container">
+    <div class="w container-main">
+        <div class="dd">
+            <ul>
+                <li><a href="#">家用电器</a></li>
+                <li><a href="list.html">手机</a>、 <a href="#">数码</a>、<a href="#">通信</a></li>
+                <li><a href="#">电脑、办公</a></li>
+                <li><a href="#">家居、家具、家装、厨具</a></li>
+                <li><a href="#">男装、女装、童装、内衣</a></li>
+                <li><a href="#">个户化妆、清洁用品、宠物</a></li>
+                <li><a href="#">鞋靴、箱包、珠宝、奢侈品</a></li>
+                <li><a href="#">运动户外、钟表</a></li>
+                <li><a href="#">汽车、汽车用品</a></li>
+                <li><a href="#">母婴、玩具乐器</a></li>
+                <li><a href="#">食品、酒类、生鲜、特产</a></li>
+                <li><a href="#">医药保健</a></li>
+                <li><a href="#">图书、音像、电子书</a></li>
+                <li><a href="#">彩票、旅行、充值、票务</a></li>
+                <li><a href="#">理财、众筹、白条、保险</a></li>
+            </ul>
+        </div>
+        <div class="focus">
+            <ul>
+                <li>
+                    <img src="upload/focus1.png" alt="">
+                </li>
+            </ul>
+        </div>
+
+        <div class="newsflash">
+            <div class="news">
+                <div class="news-hd">
+                    <h5>品优购快报</h5>
+                    <a href="#" class="more">更多</a>
+                </div>
+                <div class="news-bd">
+                    <ul>
+                        <li><a href="#"><strong>[重磅]</strong> 它来了它来了，pink老师走来了, 它是谁？</a></li>
+                        <li><a href="#"><strong>[重磅]</strong> 它来了它来了，pink老师走来了</a></li>
+                        <li><a href="#"><strong>[重磅]</strong> 它来了它来了，pink老师走来了</a></li>
+                        <li><a href="#"><strong>[重磅]</strong> 它来了它来了，pink老师走来了</a></li>
+                        <li><a href="#"><strong>[重磅]</strong> 它来了它来了，pink老师走来了, 它是谁？</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="lifeservice">
+                <ul>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                    <li>
+                        <i></i>
+                        <p>话费</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="bargain">
+                <img src="upload/bargain.png" alt="">
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+<!-- 首页专有的模块 main  end -->
+<!-- 推荐模块 start-->
+<div class="recom">
+    <div class="w recom-main">
+        <div class="recom_hd">
+            <img src="img/recom.png" alt="">
+        </div>
+        <div class="recom_bd">
+            <ul>
+                <li><img src="upload/recom_03.jpg" alt=""></li>
+                <li><img src="upload/recom_03.jpg" alt=""></li>
+                <li><img src="upload/recom_03.jpg" alt=""></li>
+                <li><img src="upload/recom_03.jpg" alt=""></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+
+<div class="floor">
+    <!-- 1楼家用电器楼层 -->
+    <div class="w jiadian">
+        <div class="box_hd">
+            <h3>家用电器</h3>
+            <div class="tab_list">
+                <ul>
+                    <li> <a href="#" class="style_red">热门</a>|</li>
+                    <li><a href="#">大家电</a>|</li>
+                    <li><a href="#">生活电器</a>|</li>
+                    <li><a href="#">厨房电器</a>|</li>
+                    <li><a href="#">生活电器</a>|</li>
+                    <li><a href="#">个护健康</a>|</li>
+                    <li><a href="#">应季电器</a>|</li>
+                    <li><a href="#">空气/净水</a>|</li>
+                    <li><a href="#">新奇特</a>|</li>
+                    <li><a href="#"> 高端电器</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="box_bd">
+            <div class="tab_content">
+                <div class="tab_list_item">
+                    <div class="col_210">
+                        <ul>
+                            <li><a href="#">节能补贴</a></li>
+                            <li><a href="#">节能补贴</a></li>
+                            <li><a href="#">节能补贴</a></li>
+                            <li><a href="#">节能补贴</a></li>
+                            <li><a href="#">节能补贴</a></li>
+                            <li><a href="#">节能补贴</a></li>
+                        </ul>
+                        <a href="#">
+                            <img src="upload/floor-1-1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="col_329">
+                        <a href="#">
+                            <img src="upload/floor-1-b01.png" alt="">
+                        </a>
+                    </div>
+                    <div class="col_221">
+                        <a href="#" class="bb"> <img src="upload/floor-1-2.png" alt=""></a>
+                        <a href="#"> <img src="upload/floor-1-3.png" alt=""></a>
+                    </div>
+                    <div class="col_221">
+                        <a href="#"> <img src="upload/floor-1-4.png" alt=""></a>
+
+                    </div>
+                    <div class="col_219">
+                        <a href="#" class="bb"> <img src="upload/floor-1-5.png" alt=""></a>
+                        <a href="#"> <img src="upload/floor-1-6.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 </body>
 <script>
 </script>
