--- a/2-CSS/案例/15-品优购项目/index.html
+++ b/2-CSS/案例/15-品优购项目/index.html
@@ -206,7 +206,42 @@
 
 <!-- 首页专有的模块 main  end -->
 <!-- 推荐模块 start-->
-<div class="recom">
+<div class="box_bd">
+    <div class="tab_content">
+        <div class="tab_list_item">
+            <div class="col_210">
+                <ul>
+                    <li><a href="#">节能补贴</a></li>
+                    <li><a href="#">节能补贴</a></li>
+                    <li><a href="#">节能补贴</a></li>
+                    <li><a href="#">节能补贴</a></li>
+                    <li><a href="#">节能补贴</a></li>
+                    <li><a href="#">节能补贴</a></li>
+                </ul>
+                <a href="#">
+                    <img src="upload/floor-1-1.png" alt="">
+                </a>
+            </div>
+            <div class="col_329">
+                <a href="#">
+                    <img src="upload/floor-1-b01.png" alt="">
+                </a>
+            </div>
+            <div class="col_221">
+                <a href="#" class="bb"> <img src="upload/floor-1-2.png" alt=""></a>
+                <a href="#"> <img src="upload/floor-1-3.png" alt=""></a>
+            </div>
+            <div class="col_221">
+                <a href="#"> <img src="upload/floor-1-4.png" alt=""></a>
+
+            </div>
+            <div class="col_219">
+                <a href="#" class="bb"> <img src="upload/floor-1-5.png" alt=""></a>
+                <a href="#"> <img src="upload/floor-1-6.png" alt=""></a>
+            </div>
+        </div>
+    </div>
+</div><div class="recom">
     <div class="w recom-main">
         <div class="recom_hd">
             <img src="img/recom.png" alt="">
@@ -243,42 +278,7 @@
                 </ul>
             </div>
         </div>
-        <div class="box_bd">
-            <div class="tab_content">
-                <div class="tab_list_item">
-                    <div class="col_210">
-                        <ul>
-                            <li><a href="#">节能补贴</a></li>
-                            <li><a href="#">节能补贴</a></li>
-                            <li><a href="#">节能补贴</a></li>
-                            <li><a href="#">节能补贴</a></li>
-                            <li><a href="#">节能补贴</a></li>
-                            <li><a href="#">节能补贴</a></li>
-                        </ul>
-                        <a href="#">
-                            <img src="upload/floor-1-1.png" alt="">
-                        </a>
-                    </div>
-                    <div class="col_329">
-                        <a href="#">
-                            <img src="upload/floor-1-b01.png" alt="">
-                        </a>
-                    </div>
-                    <div class="col_221">
-                        <a href="#" class="bb"> <img src="upload/floor-1-2.png" alt=""></a>
-                        <a href="#"> <img src="upload/floor-1-3.png" alt=""></a>
-                    </div>
-                    <div class="col_221">
-                        <a href="#"> <img src="upload/floor-1-4.png" alt=""></a>
 
-                    </div>
-                    <div class="col_219">
-                        <a href="#" class="bb"> <img src="upload/floor-1-5.png" alt=""></a>
-                        <a href="#"> <img src="upload/floor-1-6.png" alt=""></a>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
 
